# OpenIMUdriver

./: CMakeLists.txt  README.md  openimu.json
include/: cksum.h  openIMUdata.h  openIMUdataTypes.h  openIMUdriver.h  openIMUparser.h  serialCom.h
src/: cksum.cpp  main.cpp  openIMUdata.cpp  openIMUdriver.cpp  openIMUparser.cpp  serialCom.cpp
